Fixed (mostly) canvas size
Still have to figure out how to remove that extra padding.

--- a/Assignment2/style/style.css
+++ b/Assignment2/style/style.css
@@ -15,8 +15,8 @@
 
  #myCanvas {
    border: solid 3px green;
-   width: 100%;
-   height:100%;
+   /*width: 100%;*/
+   /*height:100%;*/
    background: black;
  }
 
@@ -68,5 +68,6 @@
    position: absolute;
    bottom: 0;
    width: 100%;
+   padding: 0;
 
  }
